# mysynthrust

./: Cargo.toml  README.md
src/: lib.rs  params.rs  synth_core.rs  voice.rs
